--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="add-actions">
     <br>
-    <%= f.submit "Send to the admins" %>
+    <%= f.submit "Submit" %>
   </div>
 </div>
 
