--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,7 +1,7 @@
 /*-------------------------------------Main Style---------------------------------------*/
 
 body {
-  background:#222;
+  background: #000C17;
   color :white;
   margin: 0;
   font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
@@ -45,13 +45,13 @@ body {
 
 /*--------------------------------------Main Title--------------------------------------*/
 
-#header {                         
+.header {                         
   margin-top: 90px;
   margin-bottom: 95px;
   min-width:1190px;
 } 
 
-#header h3 {
+.header h3 {
   position:relative;
   text-align: center;
   font-size:23px;
@@ -60,7 +60,7 @@ body {
   top:40px;
 }
 
-#header h3 a {
+.header h3 a {
   text-decoration: none;
   color:orange;
 }
@@ -130,29 +130,10 @@ nav ul ul li:hover a {
   -webkit-transition:ease-in all 200ms;
 }
 
-#scrollUp img{
-  height:15px;
-  width:15px;
-  position:absolute;
-  right:40px;
-  top:20px;
-  font-size:12px;
-  z-index:10;
-} 
-
-#scrollDown img {
-  height:15px;
-  width:15px;
-  position :absolute;
-  right:40px;
-  top:90px;
-  font-size:12px;
-  z-index:10;
-} 
 
 /*---------------------------------Title Drop Scrollers---------------------------------*/
 
-#scrollbar1 {
+.scrollbar1 {
   width:200px;
   height:125px;
   background-color:rgba(0, 0, 0,0);
@@ -162,7 +143,7 @@ nav ul ul li:hover a {
   float:left;
 }
 
-#scrollbar2{
+.scrollbar2{
   width:200px;
   height:125px;
   background-color:rgba(0, 0, 0,0);
@@ -172,7 +153,7 @@ nav ul ul li:hover a {
   float:left;
 }
  
-#scrollbar3{
+.scrollbar3{
   width:200px;
   height:125px;
   background-color:rgba(0, 0, 0,0);
@@ -184,7 +165,7 @@ nav ul ul li:hover a {
 
 /*--------------------------------------- Buttons ------------------ */
 
-#buttons {
+.buttons {
   position: absolute;
   margin-top: 40px;
   margin-left:-25px;
@@ -192,31 +173,13 @@ nav ul ul li:hover a {
   font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 }
 
-#buttons ul li {
+.buttons ul li {
   display: inline;
   padding-right:20px;
 }
 
-#buttons ul li a {
+.buttons ul li a {
   text-align:center;
-}
-
-#mostrecent {
-  color: orange;
-  text-decoration: overline;
-}
-
-#randomize {
-  text-decoration: none;
-  color: white;
-}
-
-#mostrecent:hover {
-  opacity:0.85;
-}
-
-#randomize:hover {
-  opacity:0.85;
 }
 
 .new-post {
@@ -235,7 +198,7 @@ nav ul ul li:hover a {
 }
 
 
-.group1 { 
+.vid-container { 
   display:inline-block;
   width:49.2%;
   float: left;
@@ -246,11 +209,11 @@ nav ul ul li:hover a {
 }
 
 
-.group1 img {
+.vid-container img {
   width:100%;
 }
 
-.group1 a {
+.vid-container a {
   text-decoration: none;
 }
 
@@ -292,7 +255,7 @@ iframe {
   opacity: 0.8;
 }
 
-span {
+.post-desc {
   display: inline-block;
   vertical-align: middle;
   line-height: normal;
@@ -303,7 +266,7 @@ span {
 
 /*------------------------------------------Footer--------------------------------------*/
 
-#footer {
+.footer {
   height:20px;
   bottom:0px;
   left:0px;
@@ -313,7 +276,7 @@ span {
   z-index:2;
 } 
 
-#footer a {                 
+.footer a {                 
   font-size:8px;
   position:fixed;
   bottom:5px;
@@ -324,7 +287,7 @@ span {
 }
 
 
-/*------------------------------------------Form-----------------------------------------*/
+/*------------------------------------------New Post Form-----------------------------------------*/
 
 .new-header {
   text-align: center;
@@ -373,7 +336,7 @@ span {
   margin: 20px 0 50px 0;
 }
 
-a.new-back {
+.back-button {
   color: white;
   text-decoration: none;
 }
