--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,10 @@
 <div class="contentBox">
 <% @posts.each do |post| %>
 
-    <div class="group1">
+    <div class="vid-container">
       <div onclick="play(this)">
         <div class="overlay" onclick="play(this)"> 
-          <span>
+          <span class="post-desc">
             <%= post.description %>
           </span>
         </div>
