--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,6 +4,6 @@
 
 <div class="back-container">
 <br>
-<%= link_to 'Back', posts_path, class: 'new-back' %>
+<%= link_to 'Back', posts_path, class: 'back-button' %>
 <br>
 </div>
