adding migration file for admin and changing css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,15 +25,15 @@
 
     <div class="header">
         
-          <h3><%= link_to 'The Eternal Archive.', root_path %></h3>
+          <h3><%= link_to 'TEA.', root_path %></h3>
                 <div class="fadein">
                 <img src="https://ununsplash.imgix.net/33/hBd6EPoQT2C8VQYv65ys_White%20Sands.jpg?q=75&amp;fm=jpg&amp;s=440edea0dacbf61ee20f8ff106573fb3" alt="Cover 1"/>
-              </div>
+                </div>
           
-      <center><nav>
+     <nav class="main-header">
         <ul>
           <li>
-            <section style="width:240px"><%= link_to 'Healthy', root_path(name: @healthy)%></section>
+            <section class="healthy-header"><%= link_to 'Healthy', root_path(name: @healthy)%></section>
               <ul>            
                 <div class="scrollbar1" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                   <li><%= link_to 'Fitness', root_path(name: 'fitness')%></li>
@@ -42,7 +42,7 @@
               </ul>
           </li>
           <li>
-            <section style="width:280px"><%= link_to 'Wealthy', root_path(name: @wealthy)%></section>
+            <section class="wealthy-header"><%= link_to 'Wealthy', root_path(name: @wealthy)%></section>
               <ul>
             
                 <div class="scrollbar2" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
@@ -52,10 +52,7 @@
               </ul>
           </li>
           <li>
-            <a style="width:100px">and</a>
-          </li>
-          <li>
-            <section style="width:220px"><%= link_to 'Wise', root_path(name: @wise)%></section>
+            <section class="wise-header"><%= link_to 'Wise', root_path(name: @wise)%></section>
               <ul>
                 <div class="scrollbar3" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                   <li><%= link_to 'Science', root_path(name: 'science')%></li>
@@ -67,7 +64,7 @@
               </ul>
           </li> 
         </ul>
-      </nav></center>
+      </nav>
       
         <div class="buttons">
             <ul>
