--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -18,13 +18,11 @@ body {
 /*--------------------------------------Cover pic---------------------------------------*/
 
 .fadein { 
-  position:absolute; 
   width:100%;
   margin: 0;  
   max-height:396px;
   float: left;
-  top:0px;
-  left: 0px;
+  position: relative;
   overflow:hidden;
   opacity:0.7;
   -moz-border-radius: 3px;
@@ -46,18 +44,20 @@ body {
 /*--------------------------------------Main Title--------------------------------------*/
 
 .header {                         
-  margin-top: 90px;
-  margin-bottom: 95px;
-  min-width:1190px;
+  width:100%;
+  height: 396px;
+  position: relative;
 } 
 
 .header h3 {
-  position:relative;
+  position:absolute;
   text-align: center;
-  font-size:23px;
+  font-size:20px;
   font-weight:100;
   z-index:1;
-  top:40px;
+  top:0;
+  left: 0;
+  padding: 10px;
 }
 
 .header h3 a {
@@ -67,6 +67,15 @@ body {
 
 
 /*------------------------------------Title Bar/Drop Down--------------------------------*/
+
+.main-header {
+  position: absolute;
+  top:0;
+}
+
+.healthy-header, .wealthy-header, .wise-header {
+  width:250px;
+}
 
 nav {
   height:163px;
@@ -81,7 +90,7 @@ nav ul li:hover ul {
 }
 
 nav ul {
-  padding: 0px 0px; 
+  padding: 0; 
   list-style: none;
   position: relative;
   display: inline-table;
@@ -98,7 +107,7 @@ nav ul li a {
   text-decoration: none;
   padding-top:10px;
   padding-bottom:10px;  
-  font-size: 65px;
+  font-size: 30px;
   font-weight: 100;
   font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
   text-decoration: none;
@@ -110,7 +119,7 @@ nav ul ul li {
 
 nav ul ul li a {
   position: relative;
-  font-size:20px;
+  font-size:15px;
   text-align:center;
   color:white;
   font-family:'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
@@ -167,15 +176,17 @@ nav ul ul li:hover a {
 
 .buttons {
   position: absolute;
-  margin-top: 40px;
-  margin-left:-25px;
+  float: right;
+  right:0;
+  top: 0;
+  margin:10px;
   font-size:15px;
   font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 }
 
 .buttons ul li {
   display: inline;
-  padding-right:20px;
+  padding-right:10px;
 }
 
 .buttons ul li a {
@@ -206,6 +217,7 @@ nav ul ul li:hover a {
   overflow: hidden;
   margin:0.4%;
   text-decoration: none;
+  border-radius: 3px;
 }
 
 
