--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+
+  <div class="field">
+    <%= f.label :parent %><br>
+    <%= f.text_field :parent %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
