--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -17,7 +17,7 @@ body {
 
 /*--------------------------------------Cover pic---------------------------------------*/
 
-.fadein { 
+.cover-photo { 
   width:100%;
   margin: 0;  
   max-height:396px;
@@ -30,7 +30,7 @@ body {
   border-radius: 3px;
 }
   
-.fadein img { 
+.cover-photo img { 
   position:relative;  
   top:-75px;
   width:100%; 
@@ -45,40 +45,48 @@ body {
 
 .header {                         
   width:100%;
-  height: 396px;
-  position: relative;
+  height: 70px;
+  position: fixed;
+  background-color: rgba(0,0,0,0.7);
+  z-index: 999;
 } 
 
+/*--------------------------------------Home button--------------------------------------*/
+
 .header h3 {
-  position:absolute;
-  text-align: center;
-  font-size:20px;
+  position:relative;
+  font-size:30px;
   font-weight:100;
+  margin: 0;
   z-index:1;
   top:0;
   left: 0;
-  padding: 10px;
+  margin: 15px;
 }
 
 .header h3 a {
   text-decoration: none;
   color:orange;
+  padding: 15px;
 }
 
 
 /*------------------------------------Title Bar/Drop Down--------------------------------*/
 
 .main-header {
-  position: absolute;
+  position: fixed;
   top:0;
+  z-index: 1000;
+  left:250px;
 }
 
 .healthy-header, .wealthy-header, .wise-header {
-  width:250px;
+  width:220px;
+  text-align: center;
 }
 
 nav {
-  height:163px;
+  height:150px;
 }
 
 nav ul ul {
@@ -92,9 +100,6 @@ nav ul li:hover ul {
 nav ul {
   padding: 0; 
   list-style: none;
-  position: relative;
-  display: inline-table;
-  left:10px;
 }
 
 nav ul li {
@@ -105,24 +110,22 @@ nav ul li a {
   display: block; 
   color:white;
   text-decoration: none;
-  padding-top:10px;
-  padding-bottom:10px;  
+  padding: 0;
   font-size: 30px;
-  font-weight: 100;
-  font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
   text-decoration: none;
 }
 
 nav ul ul li {
-  float: none; 
+  text-align: center;
+  float: left;
+  display: block;
+  height: 20px;
+  margin: 20px;  
 }
 
 nav ul ul li a {
-  position: relative;
   font-size:15px;
-  text-align:center;
   color:white;
-  font-family:'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 }
 
 nav ul li section:hover a {
@@ -132,8 +135,8 @@ nav ul li section:hover a {
 }
 
 nav ul ul li:hover a {
-  padding-top:10px;
-  padding-bottom: 10px; 
+  margin: 0;
+  padding: 0;
   color: orange;
   transition:ease-in all 200ms;
   -webkit-transition:ease-in all 200ms;
@@ -142,42 +145,17 @@ nav ul ul li:hover a {
 
 /*---------------------------------Title Drop Scrollers---------------------------------*/
 
-.scrollbar1 {
-  width:200px;
-  height:125px;
-  background-color:rgba(0, 0, 0,0);
-  margin-top:0px;
-  margin-left:25px;
-  overflow:auto;
-  float:left;
-}
-
-.scrollbar2{
-  width:200px;
-  height:125px;
-  background-color:rgba(0, 0, 0,0);
-  margin-top:0px;
-  margin-left:45px;
-  overflow:auto;
-  float:left;
-}
- 
-.scrollbar3{
-  width:200px;
-  height:125px;
-  background-color:rgba(0, 0, 0,0);
-  margin-top:0px;
-  margin-left:-5px;
-  overflow-y:auto;
-  float:left;
+.scrollbar1, .scrollbar2, .scrollbar3 {
+  text-align: center;
 }
 
 /*--------------------------------------- Buttons ------------------ */
 
 .buttons {
-  position: absolute;
+  position: fixed;
   float: right;
   right:0;
+  z-index: 1000;
   top: 0;
   margin:10px;
   font-size:15px;
@@ -186,7 +164,7 @@ nav ul ul li:hover a {
 
 .buttons ul li {
   display: inline;
-  padding-right:10px;
+  padding-right:15px;
 }
 
 .buttons ul li a {
