--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,15 +23,15 @@
 
     
   <div class="wrapper">
-
+  
+  <div class="cover-photo">
+                <img src="https://ununsplash.imgix.net/33/hBd6EPoQT2C8VQYv65ys_White%20Sands.jpg?q=75&amp;fm=jpg&amp;s=440edea0dacbf61ee20f8ff106573fb3" alt="Cover 1"/>
+  </div>
 
     <div class="header">
         
           <h3><%= link_to 'TEA.', root_path %></h3>
-                <div class="fadein">
-                <img src="https://ununsplash.imgix.net/33/hBd6EPoQT2C8VQYv65ys_White%20Sands.jpg?q=75&amp;fm=jpg&amp;s=440edea0dacbf61ee20f8ff106573fb3" alt="Cover 1"/>
-                </div>
-          
+                  
      <nav class="main-header">
         <ul>
           <li>
