--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
      <nav class="main-header">
         <ul>
           <li>
-            <section class="healthy-header"><%= link_to 'Healthy', root_path(name: @healthy)%></section>
+            <section class="healthy-header"><%= link_to 'Healthy', root_path(name: @category_healthy_name)%></section>
               <ul>            
                 <div id="scrollbar1" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                   <% if Category.parent.present?%>
@@ -48,7 +48,7 @@
               </ul>
           </li>
           <li>
-            <section class="wealthy-header"><%= link_to 'Wealthy', root_path(name: @wealthy)%></section>
+            <section class="wealthy-header"><%= link_to 'Wealthy', root_path(name: @category_wealthy_name)%></section>
               <ul>
                 <div id="scrollbar2" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                   <% if Category.parent.present?%>
@@ -61,14 +61,15 @@
               </ul>
           </li>
           <li>
-            <section class="wise-header"><%= link_to 'Wise', root_path(name: @wise)%></section>
+            <section class="wise-header"><%= link_to 'Wise', root_path(name: @category_wise_name)%></section>
               <ul>
                 <div class="scrollbar3" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
-                  <li><%= link_to 'Science', root_path(name: 'science')%></li>
-                  <li><%= link_to 'Philosophy', root_path(name: 'philosophy')%></li>
-                  <li><%= link_to 'Politics', root_path(name: 'politics')%></li>
-                  <li><%= link_to 'Culture', root_path(name: 'culture')%></li>
-                  <li><%= link_to 'Sociology', root_path(name: 'sociology')%></li>          
+                  <% if Category.parent.present?%>
+                    <% @category_wise.each do |category|%>
+                    <li><%= link_to category.name, root_path(name: category.name)%></li>
+                    <%end%>
+                  <%else%>
+                  <%end%>        
                 </div>
               </ul>
           </li> 
