--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -279,6 +279,11 @@ iframe {
 
 /*------------------------------------------New Post Form-----------------------------------------*/
 
+.new-post-container {
+  position: absolute;
+  top:375px;
+  left:200px;
+}
 .new-header {
   text-align: center;
   line-height: 80px;
