--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="new-post-container">
 <h1>Editing Category</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @category %> |
 <%= link_to 'Back', categories_path %>
+</div>
