--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
+<div class="new-post-container">
 <h4 class="new-header">Suggest a post</h4>
 
 <%= render 'form' %>
@@ -6,4 +7,5 @@
 <br>
 <%= link_to 'Back', posts_path, class: 'back-button' %>
 <br>
+</div>
 </div>
