--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,8 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @category.name %>
+  <%= @category.name %><br>
+  <%= @category.parent %>
 </p>
 
 <%= link_to 'Edit', edit_category_path(@category) %> |
