--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,12 +107,12 @@
 <!-- - - - - - - - -  - - - - - - - - - - - - - - java - - - - - - - - - - - - - - - - - - - - - - - - -->    
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
-// <script>
-//    $(".overlay").click(function(){
-//     $(".overlay").hide();
-//     $(".video")[0].src += "&autoplay=1";
-//     $(this).unbind("click");  //or some other way to make sure that this only happens once
-//    });
+<script>
+   $("#overlay").click(function(){
+    $("#overlay").hide();
+    $(".video")[0].src += "&autoplay=1";
+    $(this).unbind("click");  //or some other way to make sure that this only happens once
+   });
 // </script>
 
 </body>
