--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,15 +108,13 @@
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
 <script>
-   $("#overlay").click(function(){
-    $("#overlay").hide();
+   $(".overlay").click(function(){
+    $(".overlay").hide();
     $(".video")[0].src += "&autoplay=1";
-    $(this).unbind("click");  //or some other way to make sure that this only happens once
+    $(this).unbind("click"); 
+    return false ;//or some other way to make sure that this only happens once
    });
 // </script>
 
 </body>
 </html>
-
-
-
