--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,15 +2,14 @@
 <% @posts.each do |post| %>
 
     <div class="vid-container">
-      <div onclick="play(this)">
-        <div id="overlay" onclick="play(this)"> 
+        <div class="overlay" onclick="play(this)"> 
           <span class="post-desc">
             <%= post.description %>
           </span>
         </div>
         <%= embed(post.url) %>
-      </div>        
-    </div>
+    </div>        
+  
 
 <% end %>
 </div>
