--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 
     <div class="header">
         
-          <h3><%= link_to 'TEA.', root_path %></h3>
+          <div class="logo"><%= link_to 'TEA.', root_path %></div>
                   
      <nav class="main-header">
         <ul>
