--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,7 +4,7 @@ body {
   background: #000C17;
   color :white;
   margin: 0;
-  font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -45,7 +45,7 @@ body {
 
 .header {                         
   width:100%;
-  height: 70px;
+  height: 90px;
   position: fixed;
   background-color: rgba(0,0,0,0.7);
   z-index: 999;
@@ -53,22 +53,20 @@ body {
 } 
 
 /*--------------------------------------Home button--------------------------------------*/
-
-.header h3 {
+.header .logo {
+  margin: 30px 0 30px 10px;
+}
+.header .logo a {
   position:relative;
   font-size:30px;
-  font-weight:100;
-  margin: 0;
+  line-height: 30px;
+  font-weight:500;
   z-index:1;
   top:0;
   left: 0;
-  margin: 15px;
-}
-
-.header h3 a {
   text-decoration: none;
   color:orange;
-  padding: 15px;
+  padding: 30px;
 }
 
 
@@ -86,23 +84,8 @@ body {
   text-align: center;
 }
 
-nav {
-  height:150px;
-}
-
-nav ul ul {
-  display: none;
-  position: absolute;
-  width: 100%;
-}
-
-nav ul li:hover ul {
-  display: block;
-}
-
 nav ul {
-  padding: 0; 
-  height: 20px;
+  padding: 0;
   list-style: none;
 }
 
@@ -110,13 +93,22 @@ nav ul li {
   float: left;
 }
 
+nav ul li:hover ul {
+  display: block;
+}
+
+
 nav ul li a {
   display: block; 
   color:white;
   text-decoration: none;
-  padding: 0;
   font-size: 30px;
-  text-decoration: none;
+}
+
+nav ul ul {
+  display: none;
+  position: absolute;
+  width: 100%;
 }
 
 nav ul ul li {
@@ -233,22 +225,22 @@ iframe {
   position:absolute;
   cursor: pointer;
   padding: 0;
-  bottom:-100px;
+  bottom:-200px;
   margin: 0;
-  height: 50%;
+  height: 100%;
   width:100%;
   opacity: 0;
   transition: ease-in all 200ms;
   z-index:9999;
   color: orange;
   font-size: 23px;
-  line-height: 166px;
+  line-height: 336px;
   text-align: center;
 }
 
 .vid-container:hover .overlay{
-  -webkit-transform: translate(0,-100px); /* Safari */
-  transform: translate(0,-100px);
+  -webkit-transform: translate(0,-200px); /* Safari */
+  transform: translate(0,-200px);
   background-color: black;
   opacity: 0.8;
 }
