--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -32,7 +32,7 @@ body {
   
 .cover-photo img { 
   position:relative;  
-  top:-75px;
+  top:-100px;
   width:100%; 
 }
 
@@ -45,28 +45,28 @@ body {
 
 .header {                         
   width:100%;
-  height: 90px;
+  height: 80px;
   position: fixed;
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0,0,0,0.5);
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
   z-index: 999;
-  box-shadow:0 0 10px 0 black;
 } 
 
 /*--------------------------------------Home button--------------------------------------*/
 .header .logo {
-  margin: 30px 0 30px 10px;
+  float: left;
+  margin: 0;  
+  padding: 0;
 }
 .header .logo a {
   position:relative;
   font-size:30px;
-  line-height: 30px;
+  line-height: 80px;
   font-weight:500;
   z-index:1;
-  top:0;
-  left: 0;
   text-decoration: none;
   color:orange;
-  padding: 30px;
+  padding: 25px;
 }
 
 
@@ -74,23 +74,27 @@ body {
 
 .main-header {
   position: fixed;
-  top:0;
+  top:0px;
+  line-height: 80px;
   z-index: 1000;
   left:250px;
 }
 
 .healthy-header, .wealthy-header, .wise-header {
-  width:220px;
+  width:150px;
   text-align: center;
 }
 
 nav ul {
   padding: 0;
+  margin: 0;
   list-style: none;
 }
 
 nav ul li {
   float: left;
+  margin: 0px 30px;
+  position: relative;
 }
 
 nav ul li:hover ul {
@@ -108,31 +112,50 @@ nav ul li a {
 nav ul ul {
   display: none;
   position: absolute;
-  width: 100%;
+  /*top:55px;*/
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 2px;
+}
+
+.healthy-scroll {
+  left:-15px;
+  width: 185px;
+}
+
+.wealthy-scroll {
+  left:-25px;
+  width: 200px;
+}
+
+.wise-scroll {
+  left:-150px;
+  width:480px;
 }
 
 nav ul ul li {
   text-align: center;
-  float: left;
   display: block;
-  height: 20px;
-  padding: 20px;  
+  padding: 0;  
+  margin: 0;
 }
 
 nav ul ul li a {
   font-size:15px;
+  padding: 5px 20px; 
+  margin: 0;
+  height: 30px;
+  line-height: 30px;
   color:white;  
 }
 
 nav ul li section:hover a {
-  color: #ddd;
+  color: #ccc;
   transition:ease-in all 200ms;
   -webkit-transition:ease-in all 200ms;
 }
 
 nav ul ul li:hover a {
   margin: 0;
-  padding: 0;
   color: orange;
   transition:ease-in all 200ms;
   -webkit-transition:ease-in all 200ms;
@@ -151,24 +174,32 @@ nav ul ul li:hover a {
   position: fixed;
   float: right;
   right:0;
+  margin: 0;
   z-index: 1000;
-  top: 0;
-  margin:10px;
+  line-height: 80px;
   font-size:15px;
 }
 
+.buttons ul {
+  margin: 0;
+}
 .buttons ul li {
   display: inline;
-  padding-right:15px;
 }
 
 .buttons ul li a {
   text-align:center;
+  padding:10px;
+  margin: 5px;
 }
 
 .new-post {
   text-decoration: none;
   color:#fff;
+}
+
+.buttons ul li a:hover {
+  color: #ccc;
 }
 
 /*--------------------------------------- Content --------------------------------------*/
@@ -225,7 +256,7 @@ iframe {
   position:absolute;
   cursor: pointer;
   padding: 0;
-  bottom:-200px;
+  bottom:-300px;
   margin: 0;
   height: 100%;
   width:100%;
@@ -239,8 +270,8 @@ iframe {
 }
 
 .vid-container:hover .overlay{
-  -webkit-transform: translate(0,-200px); /* Safari */
-  transform: translate(0,-200px);
+  -webkit-transform: translate(0,-300px); /* Safari */
+  transform: translate(0,-300px);
   background-color: black;
   opacity: 0.8;
 }
