--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label :parent %><br>
-    <%= f.text_field :parent %>
+    <%= f.select :parent, ["healthy", "wealthy", "wise"]%>
   </div>
 
   <div class="actions">
