--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
         <ul>
           <li>
             <section class="healthy-header"><%= link_to 'Healthy', root_path(name: @category_healthy_name)%></section>
-              <ul>            
+              <ul class="healthy-scroll">            
                 <div id="scrollbar1" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                   <% if Category.parent.present?%>
                     <% @category_healthy.each do |category|%>
@@ -50,7 +50,7 @@
           </li>
           <li>
             <section class="wealthy-header"><%= link_to 'Wealthy', root_path(name: @category_wealthy_name)%></section>
-              <ul>
+              <ul class="wealthy-scroll">
                 <div id="scrollbar2" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                   <% if Category.parent.present?%>
                     <% @category_wealthy.each do |category|%>
@@ -63,7 +63,7 @@
           </li>
           <li>
             <section class="wise-header"><%= link_to 'Wise', root_path(name: @category_wise_name)%></section>
-              <ul>
+              <ul class="wise-scroll">
                 <div class="scrollbar3" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                   <% if Category.parent.present?%>
                     <% @category_wise.each do |category|%>
@@ -116,6 +116,28 @@
     return false;
   }
 </script>
+
+<script  type="text/javascript">
+     $(window).on('scroll', function () {
+        var scrollTop = $(window).scrollTop();
+        if (scrollTop > 300) {
+            $('.logo a').stop().animate({fontsize: "20px"},100);
+            $('.header').stop().animate({height: "50px"},100);
+            $('.logo a').stop().animate({padding: "18px"},100);
+            $('.logo a').stop().animate({lineHeight: "50px"},100);
+            $('.main-header').stop().animate({lineHeight: "50px"},100);
+            $('.buttons').stop().animate({lineHeight: "50px"},100);
+        }
+        else {
+             $('.logo a').stop().animate({fontsize: "30px"},100);
+             $('.header').stop().animate({height: "80px"},100);  
+             $('.logo a').stop().animate({padding: "25px"},100);
+             $('.logo a').stop().animate({lineHeight: "80px"},100);
+             $('.main-header').stop().animate({lineHeight: "80px"},100);
+             $('.buttons').stop().animate({lineHeight: "80px"},100);
+        }
+     });
+     </script>
 
 
 </body>
