--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -24,7 +24,7 @@ body {
   float: left;
   position: relative;
   overflow:hidden;
-  opacity:0.7;
+  /*opacity:0.7;*/
   -moz-border-radius: 3px;
   -webkit-border-radius:3px;
   border-radius: 3px;
@@ -45,9 +45,9 @@ body {
 
 .header {                         
   width:100%;
-  height: 80px;
+  height: 100px;
   position: fixed;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.6);
   box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
   z-index: 999;
 } 
@@ -61,12 +61,12 @@ body {
 .header .logo a {
   position:relative;
   font-size:30px;
-  line-height: 80px;
+  line-height: 100px;
   font-weight:500;
   z-index:1;
   text-decoration: none;
   color:orange;
-  padding: 25px;
+  padding: 40px;
 }
 
 
@@ -75,7 +75,7 @@ body {
 .main-header {
   position: fixed;
   top:0px;
-  line-height: 80px;
+  line-height: 100px;
   z-index: 1000;
   left:250px;
 }
@@ -106,15 +106,14 @@ nav ul li a {
   display: block; 
   color:white;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 35px;
 }
 
 nav ul ul {
   display: none;
   position: absolute;
-  /*top:55px;*/
-  background-color: rgba(0,0,0,0.5);
-  border-radius: 2px;
+  background-color: rgba(0,0,0,0.6);
+  border-radius: 0px 0px 8px 8px;
 }
 
 .healthy-scroll {
@@ -161,13 +160,6 @@ nav ul ul li:hover a {
   -webkit-transition:ease-in all 200ms;
 }
 
-
-/*---------------------------------Title Drop Scrollers---------------------------------*/
-
-.scrollbar1, .scrollbar2, .scrollbar3 {
-  text-align: center;
-}
-
 /*--------------------------------------- Buttons ------------------ */
 
 .buttons {
@@ -176,8 +168,8 @@ nav ul ul li:hover a {
   right:0;
   margin: 0;
   z-index: 1000;
-  line-height: 80px;
-  font-size:15px;
+  line-height: 100px;
+  font-size:17px;
 }
 
 .buttons ul {
@@ -317,7 +309,7 @@ iframe {
 }
 .new-header {
   text-align: center;
-  line-height: 80px;
+  line-height: 100px;
   font-size: 2rem;
   margin-bottom: 0;
   height: 70px;
