--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,12 +83,17 @@
                       <li><%= link_to 'Login', new_user_session_path, class: 'new-post'  %> </li>
                   <% end %>
             </ul>
-        </div>             
+        </div>   
+
     </div>
 
-
-	
+    <div class="random-button">
+              <h4><a href="">Randomize!</a></h4>
+      </div>
+  
+	<div class="content">
       <%= yield %>
+      </div>
       
       
     <div class="footer"> 
@@ -110,6 +115,7 @@
     return false;
   }
 </script>
+
 
 <script>
      $(window).on('scroll', function () {
