--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -195,13 +195,7 @@ nav ul ul li:hover a {
   color: #ccc;
 }
 
-.random-button{
-  margin: 50px;
-  float: left;
-  top:100px;
-  left:100px;
-  position: absolute;
-}
+
 
 /*--------------------------------------- Content --------------------------------------*/
 
@@ -217,8 +211,9 @@ nav ul ul li:hover a {
   border-radius:3px;
 }
 
-.vid-container { 
+.post-container { 
   display:inline-block;
+  cursor: pointer;
   width:49.2%;
   float: left;
   position:relative;
@@ -229,14 +224,21 @@ nav ul ul li:hover a {
   z-index: 50;
 }
 
-.vid-container img {
+.post-container img {
   width:100%;
 }
 
-.vid-container a {
+.post-container a {
   text-decoration: none;
 }
 
+
+.link-container {
+  width:100%;
+  height: 332px;
+  position:relative; 
+  border:0px;
+}
 
 iframe {
   width:100%;
@@ -271,7 +273,7 @@ iframe {
   text-align: center;
 }
 
-.vid-container:hover .overlay{
+.post-container:hover .overlay{
   -webkit-transform: translate(0,-332px); /* Safari */
   background: -webkit-linear-gradient(bottom, rgba(0,0,0,1) 25%,rgba(0,0,0,0) 100%);
   opacity: 0.8;
