--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,14 +2,30 @@
 
 <% @posts.each do |post| %>
 
-    <div class="vid-container" onclick="play(this)">
-        <div class="overlay"> 
-          <span class="post-desc">
-            <%= post.description %>
-          </span>
-        </div>
-        	<%= embed(post.url) %>
-    </div>        
-  
+<div class="post-container" onclick="play(this)">
+	<% if post.url.include?("youtube") || post.url.include?("vimeo") %>
+		<div class="overlay" > 
+			<span class="post-desc">
+				<%= post.description %>
+			</span>
+		</div>
+		<div class="link-container">
+			<%= embed(post.url) %>
+		</div>
+	<%else%>
+		<a class="overlay" href="<%= post.article_url %>" onclick="window.open(this.href); return false;"> 
+			<span class="post-desc">
+				<%= post.description %>
+			</span>
+		</a>
+		<div class="link-container">
+			<%= embed(post.url) %>
+		</div>  
+	<% end %>
+</div>
+
+
 <% end %>
 </div>
+
+
