trying to get infinite scroll, includes pagination completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,9 @@
 	<div class="content">
       <%= yield %>
       </div>
-      
+      <div class="breaker">
+        
+      </div>
       
     <div class="footer"> 
       <a href="footer/copyrightpolicy.html" class="copyright"> Copyright Policy </a>       
