--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -198,7 +198,16 @@ nav ul ul li:hover a {
 
 
 /*--------------------------------------- Content --------------------------------------*/
+.content {
+  padding-bottom: 30px;
+}
 
+.breaker {
+  height:50px;
+  width: 100%;
+  position: relative;
+  display:inline-block;
+}
 .contentBox {
   width:100%;
   display:inline-block;
@@ -286,7 +295,6 @@ iframe {
   width:450px;
   opacity: 1;
 }
-
 
 
 /*------------------------------------------Footer--------------------------------------*/
