--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,10 @@
+<% javascript :defaults, 'endless_page' %>
 <div class="contentBox">
 
 <% @posts.each do |post| %>
 
 <div class="post-container" onclick="play(this)">
+
 	<% if post.url.include?("youtube") || post.url.include?("vimeo") %>
 		<div class="overlay" > 
 			<span class="post-desc">
@@ -25,7 +27,13 @@
 </div>
 
 
+
+
 <% end %>
+
+<%= will_paginate @posts, :page_links => false %>
+
+
 </div>
 
 
