--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
+  font-size: 67.5%
 }
 
 ::-webkit-scrollbar {
@@ -25,8 +26,6 @@ body {
   float: left;
   position: relative;
   overflow:hidden;
-  /*opacity:0.7;*/
-  -moz-border-radius: 3px;
   -webkit-border-radius:3px;
   border-radius: 3px;
 }
@@ -61,7 +60,7 @@ body {
 }
 .header .logo a {
   position:relative;
-  font-size:30px;
+  font-size:2rem;
   line-height: 100px;
   font-weight:500;
   z-index:1;
@@ -107,7 +106,7 @@ nav ul li a {
   display: block; 
   color:white;
   text-decoration: none;
-  font-size: 35px;
+  font-size: 2.5rem;
 }
 
 nav ul ul {
@@ -119,17 +118,17 @@ nav ul ul {
 
 .healthy-scroll {
   left:-15px;
-  width: 185px;
+  width: 190px;
 }
 
 .wealthy-scroll {
   left:-25px;
-  width: 200px;
+  width: 210px;
 }
 
 .wise-scroll {
   left:-150px;
-  width:480px;
+  width:500px;
 }
 
 nav ul ul li {
@@ -140,7 +139,7 @@ nav ul ul li {
 }
 
 nav ul ul li a {
-  font-size:15px;
+  font-size:1rem;
   padding: 5px 20px; 
   margin: 0;
   height: 30px;
@@ -170,7 +169,7 @@ nav ul ul li:hover a {
   margin: 0;
   z-index: 1000;
   line-height: 100px;
-  font-size:17px;
+  font-size:1rem;
 }
 
 .buttons ul {
@@ -273,26 +272,40 @@ iframe {
   height: 100%;
   width:100%;
   opacity: 0;
-  transition: ease-in all 200ms;
+  transition: ease-in all 100ms;
   z-index:9999;
-  color: orange;
-  font-size: 23px;
-  line-height: 490px;
-  text-align: center;
+  /*line-height: 490px;*/
+  /*text-align: center;*/
 }
 
 .post-container:hover .overlay{
   -webkit-transform: translate(0,-332px); /* Safari */
-  background: -webkit-linear-gradient(bottom, rgba(0,0,0,1) 25%,rgba(0,0,0,0) 100%);
-  opacity: 0.8;
+  /*background: -webkit-linear-gradient(60deg, rgba(0,0,0,1) 0%,rgba(0,0,0,0.05) 100%);*/
+  background: -webkit-radial-gradient( center,ellipse cover, rgba(0,0,0,0.05) 0%,rgba(0,0,0,1) 100%);
+  opacity: 0.99;
 }
 
 .post-desc {
   display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
-  width:450px;
+  margin-left: 90px;
+  /*vertical-align: middle;
+  line-height: normal;*/
+/*  width:450px;*/
+  font-size: 2rem;
   opacity: 1;
+  color: orange;
+  font-weight: 400;
+}
+
+.created-at {
+  display: block;
+  margin-left: 90px;
+  font-size: 1rem;
+  /*vertical-align: middle;
+  line-height: normal;*/
+/*  width:450px;*/
+  opacity: 1;
+
 }
 
 .pagination a, .pagination em , .pagination span {
@@ -313,7 +326,7 @@ iframe {
 } 
 
 .footer a {                 
-  font-size:8px;
+  font-size:0.5rem;
   position:fixed;
   bottom:5px;
   color:orange;
