--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,6 +5,9 @@
 		<div class="overlay" > 
 			<span class="post-desc">
 				<%= post.description %>
+				<span class="created-at">
+					<%= post.created_at %>
+				</span>
 			</span>
 		</div>
 		<div class="link-container">
@@ -14,6 +17,9 @@
 		<a class="overlay" href="<%= post.article_url %>" onclick="window.open(this.href); return false;"> 
 			<span class="post-desc">
 				<%= post.description %>
+				<span class="created-at">
+					<%= post.created_at %>
+				</span>
 			</span>
 		</a>
 		<div class="link-container">
