--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -285,27 +285,26 @@ iframe {
   opacity: 0.99;
 }
 
-.post-desc {
-  display: inline-block;
-  margin-left: 90px;
-  /*vertical-align: middle;
-  line-height: normal;*/
-/*  width:450px;*/
-  font-size: 2rem;
+
+.post-information {
+  display: block;
+  margin-left: 70px;
+  margin-top: 220px;
   opacity: 1;
   color: orange;
+}
+
+.post-description {
   font-weight: 400;
+  margin: 0;
+  padding: 0;
+  font-size: 2rem;
 }
 
 .created-at {
-  display: block;
-  margin-left: 90px;
+  margin: 0;
+  padding: 0;
   font-size: 1rem;
-  /*vertical-align: middle;
-  line-height: normal;*/
-/*  width:450px;*/
-  opacity: 1;
-
 }
 
 .pagination a, .pagination em , .pagination span {
