--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,7 +1,7 @@
 /*-------------------------------------Main Style---------------------------------------*/
 
 body {
-  background: green;
+  background: #000C17;
   color :white;
   margin: 0;
   font-family: 'Roboto', sans-serif;
