--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,11 +13,9 @@
 		</div>
 	<%else%>
 		<a class="overlay" href="<%= post.article_url %>" onclick="window.open(this.href); return false;"> 
-			<span class="post-desc">
-				<%= post.description %>
-				<span class="created-at">
-					<%= time_ago_in_words(post.created_at) %> ago
-				</span>
+			<span class="post-information">
+				<h5 class="post-description"><%= post.description %></h5>
+				<p class="created-at"><%= time_ago_in_words(post.created_at) %> ago</p>
 			</span>
 		</a>
 		<div class="link-container">
