--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -194,6 +194,14 @@ nav ul ul li:hover a {
   color: #ccc;
 }
 
+#button {
+    font-size: 400%;
+    position: absolute;
+    z-index: 100;
+    margin-top: 200px;
+    margin-left: 550px;
+    cursor: pointer;
+}
 
 
 /*--------------------------------------- Content --------------------------------------*/
